--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"private": true,
 	"dependencies": {
 		"@react-pdf/renderer": "^3.1.12",
-		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.16.0",
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.7",
 		"styled-components": "^5.3.3",
@@ -19,12 +18,6 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
 	},
 	"browserslist": {
 		"production": [
@@ -39,7 +32,13 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react": "^18.0.37",
+		"@types/react-dom": "^18.0.11",
 		"@tailwindcss/forms": "^0.5.2",
+		"eslint": "^8.38.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.3.4",
 		"tailwindcss": "^3.0.24"
 	}
 }
