--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-	"name": "react-tailwindcss-portfolio",
+	"name": "jakelipscomb-portfolio",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@fontsource/roboto": "^5.0.8",
+		"@mui/icons-material": "^5.14.13",
+		"@mui/material": "^5.14.13",
 		"@react-pdf/renderer": "^3.1.12",
 		"@testing-library/react": "^13.3.0",
+		"mui-image": "^1.0.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.16.0",
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.7",
-		"styled-components": "^5.3.3",
+		"react-swipeable-views": "^0.14.0",
+		"react-swipeable-views-utils": "^0.14.0",
+		"styled-components": "^5.3.11",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -33,12 +41,6 @@
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
-		"@types/react-dom": "^18.0.11",
-		"@tailwindcss/forms": "^0.5.2",
-		"eslint": "^8.38.0",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.3.4",
-		"tailwindcss": "^3.0.24"
+		"@types/react-dom": "^18.0.11"
 	}
 }
