--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@fontsource/roboto": "^5.0.8",
 		"@mui/icons-material": "^5.14.13",
 		"@mui/material": "^5.14.13",
+		"@mui/styles": "^5.14.13",
 		"@react-pdf/renderer": "^3.1.12",
 		"@testing-library/react": "^13.3.0",
 		"mui-image": "^1.0.7",
