--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@mui/styles": "^5.14.13",
 		"@react-pdf/renderer": "^3.1.12",
 		"@testing-library/react": "^13.3.0",
+		"axios": "^1.5.1",
 		"mui-image": "^1.0.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -20,6 +21,8 @@
 		"react-swipeable-views": "^0.14.0",
 		"react-swipeable-views-utils": "^0.14.0",
 		"styled-components": "^5.3.11",
+		"swiper": "^10.3.1",
+		"validator": "^13.11.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
