debugging netlify build isssue

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
-		"@types/react-dom": "^18.0.11"
+		"@types/react-dom": "^18.0.11",
+		"@babel/plugin-proposal-private-property-in-object": "^7.16.7"
 	}
 }
